# pyopenface

./: .gitignore  .gitmodules  README.md
pyopenface/: CMakeLists.txt  WOpenFace.cpp  WOpenFace.h  cvt.sh  model  pyopenface.i  pyopenface.py  pyopenface_wrap.cxx  readme.md  test.py  test_wrapper.cpp
